cto/examples/valid/owner.cto.ipt
modelUnit
 namespaceDeclaration
  namespace
  qualifiedName
   org
   .
   sample
   .
   owner
 typeDeclaration
  conceptDeclaration
   classModifier
    abstract
   concept
   Address
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       street
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       city
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       zipcode
    }
 typeDeclaration
  conceptDeclaration
   classModifier
    decorator
     @
     qualifiedName
      baz
     (
     elementValuePair
      literal
       numberLiteral
        integerLiteral
         1
     )
   concept
   SuburbAddress
   extends
   Address
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       suburb
      optional
    }
 typeDeclaration
  participantDeclaration
   classModifier
    abstract
   participant
   Person
   extendsOrIdentified
    identified
     identified by
     id
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       id
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       name
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       firstName
      defaultString
       default
       =
       stringLiteral
        "Fred"
      regexDeclaration
       regex
       =
       /^[a-zA-Z]*/
      optional
    classBodyDeclaration
     fieldDeclaration
      dateField
       o 
       DateTime
      identifier
       birthDate
      defaultDate
       default
       =
       "2000-01-31T23:59:59Z"
    }
 typeDeclaration
  participantDeclaration
   participant
   Relative
   extendsOrIdentified
    extends
    Person
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       relation
      optional
    }
 typeDeclaration
  participantDeclaration
   participant
   Customer
   extendsOrIdentified
    extends
    Person
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      dateField
       o 
       DateTime
      identifier
       since
      defaultDate
       default
       =
       "2000-01-31T23:59:59.001+05:45"
    }
 typeDeclaration
  participantDeclaration
   classModifier
    decorator
     @
     qualifiedName
      foo
     (
     elementValuePair
      literal
       stringLiteral
        "arg1"
      ,
      literal
       numberLiteral
        integerLiteral
         1
     )
   classModifier
    decorator
     @
     qualifiedName
      bar
     (
     elementValuePair
      literal
       stringLiteral
        "arg2"
      ,
      literal
       true
      ,
      literal
       numberLiteral
        integerLiteral
         2
     )
   participant
   Owner
   extendsOrIdentified
    extends
    Person
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      identifierField
       o 
       SuburbAddress
      identifier
       address
    classBodyDeclaration
     fieldDeclaration
      identifierField
       o 
       Relative
      identifier
       participant
    classBodyDeclaration
     fieldDeclaration
      numericField
       o 
       numericPrimitive
        Integer
      identifier
       foo
      defaultNumber
       default
       =
       numberLiteral
        integerLiteral
         057
    }
 <EOF>
