cto/examples/invalid/datetime.cto.ipt
modelUnit
 namespaceDeclaration
  namespace
  qualifiedName
   org
   .
   sample
   .
   invalid
 typeDeclaration
  assetDeclaration
   asset
   WrongDate
   extendsOrIdentified
    identified
     identified by
     id
   classBody
    {
    classBodyDeclaration
     fieldDeclaration
      stringField
       o 
       String
      identifier
       id
    classBodyDeclaration
     fieldDeclaration
      dateField
       o 
       DateTime
      identifier
       date
      defaultDate
       default
       =
       "2000-01-31T23:59:59.001+05:41"
    }
 <EOF>
